[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/PartitionColoringWindowPopup.gd" type="Script" id=1]

[node name="PartitionColoringWindowPopup" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.5
margin_top = -250.0
margin_right = 196.5
margin_bottom = 250.0
mouse_filter = 2
window_title = "Partition ID Coloring"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 368.0
margin_bottom = 475.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 343.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 21.0
text = "Assign or change colors of Partition IDs."
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 343.0
margin_bottom = 239.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 25.0
margin_right = 343.0
margin_bottom = 207.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 175.0
mouse_filter = 2
custom_constants/hseparation = 50
columns = 3

[node name="Partition ID" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Partition ID"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 123.0
margin_right = 208.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Color" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Color"
align = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer2"]
margin_left = 37.0
margin_right = 85.0
margin_bottom = 24.0
size_flags_horizontal = 3
disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 258.0
margin_right = 329.0
margin_bottom = 24.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 19.0
text = "Visible"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 71.0
margin_bottom = 24.0
pressed = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 175.0
mouse_filter = 2
custom_constants/margin_top = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
margin_top = 25.0
margin_right = 329.0
margin_bottom = 168.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 329.0
mouse_filter = 2
size_flags_horizontal = 3
columns = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 343.0
margin_bottom = 450.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 40.0
margin_right = 333.0
margin_bottom = 207.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 323.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RandomButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 101.0
margin_right = 221.0
margin_bottom = 73.0
size_flags_vertical = 3
text = "Random Coloring"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 93.0
margin_right = 323.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 159.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Apply"

[node name="DontApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 163.0
margin_right = 323.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Don't Apply"

[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/DontApplyButton" to="." method="_on_DontApplyButton_pressed"]
